# short-game

./: .envrc  .gitignore.swp  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml  shell.nix
.direnv/: cache-.2320.3c8a5fa9a69  cache-.337909.891016b5cf1  cache-.4726.530a53dcbc9  cache-.751.8b66e3f2ebc  drv
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/editor/src/ui/: mod.rs  state.rs  viewport.rs
crates/game/: Cargo.toml  build.rs
crates/game/assets/: floor.glb
crates/game/src/: main.rs  player.rs
crates/net/: Cargo.toml  LICENSE
crates/net/examples/: simple_client.rs  simple_server.rs
crates/net/src/: events.rs  lib.rs  message.rs  systems.rs  transport.rs
src/: main.rs  player.rs
